--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-#missionStatement { background-color: #ADD8E6; color: white; padding: 16px; font-size: 16px; width: 1250px; height: 50px; } 
+#missionStatement { background-color: #ADD8E6; color: black; padding: 16px; font-size: 36px; width: 1250px; height: 50px; } 
 #logoIMG { height: 90px; width: 250px; position: relative; float: right; right: 5px; } 
 #whatOne { box-sizing: content-box; width: 431px; height: 250px; padding: 30px; border: 7px solid lightblue; position: relative; float:left; left: 25px; background-color: lightblue; } 
 #whatTwo { box-sizing: content-box; width: 431px; height: 250px; padding: 30px; border: 7px solid lightblue; position: relative; float: right; right: 25px; background-color: lightblue; } 
