--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 #missionStatement { background-color: #ADD8E6; color: black; padding: 16px; font-size: 36px; width: 1250px; height: 50px; } 
 #logoIMG { height: 90px; width: 250px; position: relative; float: right; right: 5px; } 
-#whatOne { box-sizing: content-box; width: 431px; height: 250px; padding: 30px; border: 7px solid lightblue; position: relative; float:left; left: 25px; background-color: lightblue; } 
+#whatOne { box-sizing: content-box; width: 431px; height: 250px; padding: 30px; border: 7px solid lightblue; position: relative; float: left; right: 25px; background-color: lightblue; } 
 #whatTwo { box-sizing: content-box; width: 431px; height: 250px; padding: 30px; border: 7px solid lightblue; position: relative; float: right; right: 25px; background-color: lightblue; } 
 #contactAndMin { box-sizing: content-box; width: 1025px; height: 202px; padding: 30px; border: 7px solid lightblue; position: relative; float: right; right: 15px; background-color: lightblue; } 
 #waterIMG { box-sizing: content-box; width: 215px; height: 600px; padding: 30px; border: 7px solid lightblue; position: relative; float: left; background-color: lightblue; }
